--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -22,6 +22,7 @@ $badgeColor: var(--gray-800);
   --padding: var(--xl);
   --neg-padding: calc(var(--padding) * -1);
   --sidebar-width: #{$sidebarWidth};
+  --max-width: 1920px;
 }
 
 html {
@@ -82,17 +83,15 @@ body {
 #global-container {
   position: relative;
   display: flex;
-  //flex-direction: column;
   min-height: 100vh;
-  @include left(0);
 
   @media screen and (prefers-reduced-motion: no-preference) {
     body.ltr & {
-      transition: left 250ms ease-out;
+      transition: left 100ms cubic-bezier(0.33, 1, 0.68, 1);
     }
 
     body.rtl & {
-      transition: right 250ms ease-out;
+      transition: right 100ms cubic-bezier(0.33, 1, 0.68, 1);
     }
   }
 }
@@ -157,52 +156,33 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
+  }
+}
 
-    &:after {
-      display: block;
-      content: '';
-      font-size: 0;
-      position: absolute;
-      top: 0;
-      @include right(0);
-      width: var(--m);
-      background-image: linear-gradient(
-        to right,
-        transparentize($systemInfoBgColor, 1),
-        $systemInfoBgColor
-      );
-
-      #system-info:hover & {
-        background-image: linear-gradient(
-          to right,
-          transparentize($systemInfoHoverBgColor, 1),
-          $systemInfoHoverBgColor
-        );
-      }
+@media only screen and (min-width: $minFullUiWidth) {
+  [data-sidebar='collapsed'] {
+    #system-info:hover #system-name {
+      opacity: 1;
+      transform: translateY(-50%) translateX(0);
     }
-  }
 
-  [data-sidebar='collapsed'] #system-info:hover & {
-    opacity: 1;
-    transform: translateY(-50%) translateX(0);
-  }
+    #system-name {
+      position: absolute;
+      left: calc(100% + (var(--s) * 2));
+      top: 50%;
+      transform: translateY(-50%) translateX(-5px);
+      opacity: 0;
+      @include pane;
+      color: var(--text-color);
+      border-radius: var(--medium-border-radius);
+      padding: var(--xs) var(--s);
+      white-space: nowrap;
 
-  [data-sidebar='collapsed'] & {
-    position: absolute;
-    left: calc(100% + (var(--s) * 2));
-    top: 50%;
-    transform: translateY(-50%) translateX(-5px);
-    opacity: 0;
-    @include pane;
-    color: var(--text-color);
-    border-radius: var(--medium-border-radius);
-    padding: var(--xs) var(--s);
-    white-space: nowrap;
-
-    @media screen and (prefers-reduced-motion: no-preference) {
-      transition:
-        opacity 50ms cubic-bezier(0.33, 1, 0.68, 1),
-        transform 150ms cubic-bezier(0.33, 1, 0.68, 1);
+      @media screen and (prefers-reduced-motion: no-preference) {
+        transition:
+          opacity 50ms cubic-bezier(0.33, 1, 0.68, 1),
+          transform 150ms cubic-bezier(0.33, 1, 0.68, 1);
+      }
     }
   }
 }
@@ -399,7 +379,6 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
 }
 
 #page-container {
-  //@include padding-left($sidebarWidth);
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -1817,4 +1796,10 @@ li.breadcrumb-toggle-wrapper {
       }
     }
   }
+}
+
+.container {
+  width: 100%;
+  max-width: var(--max-width);
+  margin: 0 auto;
 }
