--- a/src/web/assets/cp/src/css/_global-sidebar.scss
+++ b/src/web/assets/cp/src/css/_global-sidebar.scss
@@ -1,7 +1,7 @@
 .global-sidebar {
   --is-always-visible: true;
   --collapsed-width: 50px;
-  --prefix-size: calc(var(--collapsed-width) * 0.66);
+  --prefix-size: 30px;
   --prefix-ratio: 1;
 
   position: relative;
@@ -17,10 +17,6 @@
 
   @media screen and (prefers-reduced-motion: no-preference) {
     //transition: width 500ms cubic-bezier(0.33, 1, 0.68, 1);
-  }
-
-  [data-sidebar='collapsed'] & {
-    width: var(--collapsed-width);
   }
 
   a {
@@ -179,50 +175,56 @@
 /**
 States
  */
-[data-sidebar='collapsed'] {
-  .sidebar-action {
-    flex-direction: column;
-    justify-content: center;
+@media only screen and (min-width: $minFullUiWidth) {
+  [data-sidebar='collapsed'] {
+    .global-sidebar {
+      width: var(--collapsed-width);
+    }
 
-    &:hover {
-      .sidebar-action__label {
-        opacity: 1;
-        transform: translateY(-50%) translateX(0);
+    .sidebar-action {
+      flex-direction: column;
+      justify-content: center;
+
+      &:hover {
+        .sidebar-action__label {
+          opacity: 1;
+          transform: translateY(-50%) translateX(0);
+        }
       }
     }
-  }
 
-  .sidebar-action__label {
-    position: absolute;
-    left: calc(100% + (var(--s) * 2));
-    top: 50%;
-    transform: translateY(-50%) translateX(-5px);
-    opacity: 0;
-    @include pane;
-    color: var(--text-color);
-    border-radius: var(--medium-border-radius);
-    padding: var(--xs) var(--s);
+    .sidebar-action__label {
+      position: absolute;
+      left: calc(100% + (var(--s) * 2));
+      top: 50%;
+      transform: translateY(-50%) translateX(-5px);
+      opacity: 0;
+      @include pane;
+      color: var(--text-color);
+      border-radius: var(--medium-border-radius);
+      padding: var(--xs) var(--s);
 
-    @media screen and (prefers-reduced-motion: no-preference) {
-      transition:
-        opacity 50ms cubic-bezier(0.33, 1, 0.68, 1),
-        transform 150ms cubic-bezier(0.33, 1, 0.68, 1);
+      @media screen and (prefers-reduced-motion: no-preference) {
+        transition:
+          opacity 50ms cubic-bezier(0.33, 1, 0.68, 1),
+          transform 150ms cubic-bezier(0.33, 1, 0.68, 1);
+      }
+    }
+
+    .sidebar-action__badge {
+      z-index: 100;
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      transform: translateY(25%);
+      padding: 0;
     }
   }
 
-  .sidebar-action__badge {
-    z-index: 100;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    transform: translateY(25%);
-    padding: 0;
-  }
-}
-
-[data-sidebar='expanded'] {
-  #sidebar-toggle-icon {
-    transform: rotate(180deg);
+  [data-sidebar='expanded'] {
+    #sidebar-toggle-icon {
+      transform: rotate(180deg);
+    }
   }
 }
 
