add missing comma

--- a/src/templates/settings/assets/volumes/_edit.twig
+++ b/src/templates/settings/assets/volumes/_edit.twig
@@ -109,7 +109,7 @@
             id: 'title-translation-key-format',
             name: 'titleTranslationKeyFormat',
             value: volume.titleTranslationKeyFormat,
-            errors: volume.getErrors('titleTranslationKeyFormat')
+            errors: volume.getErrors('titleTranslationKeyFormat'),
             data: {'error-key': 'titleTranslationKeyFormat'},
         }) }}
     </div>
