--- a/src/web/assets/cp/src/css/_global-sidebar.scss
+++ b/src/web/assets/cp/src/css/_global-sidebar.scss
@@ -83,10 +83,14 @@
 }
 
 .badge {
+  display: inline-flex;
+  justify-content: center;
+  text-align: center;
   flex-shrink: 1;
-  padding: 0 6px;
   font-size: 11px;
-  line-height: 16px;
+  line-height: 1rem;
+  width: 1.1rem;
+  height: 1rem;
   border-radius: var(--s);
   background-color: var(--medium-text-color);
   color: var(--white);
