Show label on focus

--- a/src/web/assets/cp/src/css/_global-sidebar.scss
+++ b/src/web/assets/cp/src/css/_global-sidebar.scss
@@ -225,6 +225,7 @@ States
       flex-direction: column;
       justify-content: center;
 
+      &:focus-visible,
       &:hover {
         .sidebar-action__label {
           opacity: 1;
