--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -106,7 +106,7 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
 #system-info {
   display: grid;
   grid-template-columns: 30px auto;
-  grid-gap: 10px;
+  gap: 10px;
   height: calc(44rem / 16);
   padding: 0 10px;
   position: relative;
@@ -114,6 +114,7 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   flex-direction: row;
   align-items: center;
   color: currentColor;
+  border-bottom: 1px solid var(--hairline-color);
 
   &:after {
     display: none;
