--- a/src/templates/_layouts/components/global-sidebar.twig
+++ b/src/templates/_layouts/components/global-sidebar.twig
@@ -31,7 +31,7 @@
 
         <span class="sidebar-action__label">
             <span class="label">{{ item.label }}</span>
-            {% if external %}<span class="cp-icon">{{ iconSvg('external') }}</span>{% endif %}
+            {% if external %}<span class="cp-icon puny">{{ iconSvg('external') }}</span>{% endif %}
         </span>
 
         {%- if badgeCount -%}
