--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -837,7 +837,7 @@ li.breadcrumb-toggle-wrapper {
   flex-wrap: nowrap;
   justify-content: space-between;
   gap: var(--s);
-  padding: var(--s) var(--padding);
+  padding: 5px var(--padding);
   position: relative;
   z-index: 2;
   box-sizing: border-box;
@@ -852,7 +852,7 @@ li.breadcrumb-toggle-wrapper {
     z-index: 12;
     top: 0;
     background-color: var(--gray-100);
-    box-shadow: inset 0 -1px 0 transparentize($grey700, 0.9);
+    box-shadow: 0 1px 0 transparentize($grey700, 0.9);
   }
 
   @supports (backdrop-filter: blur(10px)) {
@@ -1061,11 +1061,11 @@ li.breadcrumb-toggle-wrapper {
   z-index: 1;
   margin: calc(var(--xl) + 1px) calc(var(--padding) * -1 + 2px)
     calc(var(--xl) * -1 + 2px);
-  padding: var(--s) var(--padding);
+  padding: 5px var(--padding);
   background-color: var(--gray-050);
   border-radius: var(--small-border-radius);
   box-sizing: border-box;
-  min-height: 50px;
+  min-height: 44px;
 
   &:empty {
     display: none;
