Show entry type icons in entry cards by default
Resolves #14305

[ci skip]

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -3261,6 +3261,10 @@ table {
     }
   }
 
+  & > .cp-icon {
+    @include margin(0, -4px, 0, -2px);
+  }
+
   .card-content,
   .card-content .card-body {
     display: flex;
