Better label hover
When the navs are up against each other hovering over the right nav can cause the label to appear (because the label is just hidden). This adjusts the label to ignore pointer events when the nav is collapsed

--- a/src/web/assets/cp/src/css/_global-sidebar.scss
+++ b/src/web/assets/cp/src/css/_global-sidebar.scss
@@ -242,6 +242,7 @@ States
       color: var(--text-color);
       border-radius: var(--medium-border-radius);
       padding: var(--xs) var(--s);
+      pointer-events: none;
 
       @media screen and (prefers-reduced-motion: no-preference) {
         transition:
